# cricpy

./: .gitignore  LICENSE  MANIFEST.in  PRE_PUBLISH_CHECKLIST.md  Readme.md  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  setup.py  test.ipynb  test_requirements.txt
.github/: workflows
cricpy/: __init__.py
cricpy/io/: file_loader.py
cricpy/parsers/: cricsheet_parser.py
cricpy/tests/: conftest.py  test_cricsheet_parser.py  test_file_loader.py
